--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,8 @@
     "__dirname": false,
     "console": false,
     "document": false,
-    "process": false
+    "process": false,
+    "alert": false
   },
   "indent": 1,
   "expr": true
