--- a/package.json
+++ b/package.json
@@ -11,58 +11,59 @@
     ],
     "license": "BSD",
     "devDependencies": {
-        "express": "latest",
-        "bower": "latest",
-        "require-dir": "latest",
-        "del": "latest",
-        "compression": "latest",
-        "opn": "latest",
-        "vinyl-ftp": "latest",
-        "streamqueue": "latest",
-        "phantom": "latest",
-        "phantomjs": "latest",
-        "mkdirp": "latest",
-        "multimatch": "latest",
-        "run-sequence": "latest",
-        "cli-color": "latest",
-        "progress": "latest",
-        "apache-server-configs": "latest",
-        "gulp": "latest",
-        "gulp-if": "latest",
-        "gulp-shell": "latest",
-        "gulp-watch": "latest",
-        "gulp-inject": "latest",
-        "gulp-sync": "latest",
-        "gulp-sort": "latest",
-        "gulp-prompt": "latest",
-        "gulp-load-plugins": "latest",
-        "gulp-jshint": "latest",
-        "gulp-useref": "latest",
-        "gulp-minify-css": "latest",
-        "gulp-ng-annotate": "latest",
-        "gulp-uglify": "latest",
-        "gulp-imagemin": "latest",
-        "gulp-less": "latest",
-        "gulp-jade": "latest",
-        "gulp-concat": "latest",
-        "gulp-add-src": "latest",
-        "gulp-sourcemaps": "latest",
-        "gulp-ng-html2js": "latest",
-        "gulp-size": "latest",
-        "gulp-debug": "latest",
-        "gulp-changed": "latest",
-        "gulp-uncss": "latest",
-        "gulp-flatten": "latest",
-        "gulp-rename": "latest",
-        "gulp-replace": "latest",
-        "gulp-sitemap": "latest",
-        "gulp-manifest": "latest",
-        "errorhandler": "latest",
-        "morgan": "latest",
-        "jshint-stylish": "latest",
-        "less": "latest",
-        "jade": "latest",
-        "browser-sync": "latest",
-        "gulp-nodemon": "latest"
+        "express": "4.x.x",
+        "bower": "1.x.x",
+        "require-dir": "0.x.x",
+        "del": "2.x.x",
+        "compression": "1.x.x",
+        "opn": "4.x.x",
+        "vinyl-ftp": "0.x.x",
+        "streamqueue": "1.x.x",
+        "phantom": "3.x.x",
+        "phantomjs": "2.x.x",
+        "mkdirp": "0.x.x",
+        "multimatch": "2.x.x",
+        "run-sequence": "1.x.x",
+        "cli-color": "1.x.x",
+        "progress": "1.x.x",
+        "apache-server-configs": "2.x.x",
+        "gulp": "3.x.x",
+        "gulp-if": "2.x.x",
+        "gulp-shell": "0.x.x",
+        "gulp-watch": "4.x.x",
+        "gulp-inject": "4.x.x",
+        "gulp-sync": "0.x.x",
+        "gulp-sort": "2.x.x",
+        "gulp-prompt": "0.x.x",
+        "gulp-load-plugins": "1.x.x",
+        "gulp-jshint": "2.x.x",
+        "gulp-useref": "2.x.x",
+        "gulp-minify-css": "1.x.x",
+        "gulp-ng-annotate": "2.x.x",
+        "gulp-uglify": "2.x.x",
+        "gulp-imagemin": "3.x.x",
+        "gulp-less": "3.x.x",
+        "gulp-jade": "1.x.x",
+        "gulp-concat": "2.x.x",
+        "gulp-add-src": "0.x.x",
+        "gulp-sourcemaps": "2.x.x",
+        "gulp-ng-html2js": "0.x.x",
+        "gulp-size": "2.x.x",
+        "gulp-debug": "2.x.x",
+        "gulp-changed": "1.x.x",
+        "gulp-uncss": "1.x.x",
+        "gulp-flatten": "0.x.x",
+        "gulp-rename": "1.x.x",
+        "gulp-replace": "0.x.x",
+        "gulp-sitemap": "4.x.x",
+        "gulp-manifest": "0.x.x",
+        "errorhandler": "1.x.x",
+        "morgan": "1.x.x",
+        "jshint": "2.x.x",
+        "jshint-stylish": "2.x.x",
+        "less": "2.x.x",
+        "jade": "1.x.x",
+        "browser-sync": "2.x.x",
+        "gulp-nodemon": "2.x.x"
     }
 }
