EcmaScript 6 migration: src, gulp, server, jshint; minor fixes and updates

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,8 @@
 {
-  "globalstrict": true,
+  "esversion": 6,
+  "globalstrict": false,
+  "strict": false,
+  "node": true,
   "globals": {
     "angular": false,
     "module": false,
