--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "error"
     ],
     "license": "BSD",
+    "engine": "node >= 5.x.x",
     "devDependencies": {
         "express": "4.x.x",
         "bower": "1.x.x",
@@ -57,6 +58,8 @@
         "gulp-replace": "0.x.x",
         "gulp-sitemap": "4.x.x",
         "gulp-manifest": "0.x.x",
+        "gulp-babel": "6.x.x",
+        "babel-preset-es2015": "6.x.x",
         "errorhandler": "1.x.x",
         "morgan": "1.x.x",
         "jshint": "2.x.x",
