--- a/package.json
+++ b/package.json
@@ -5,68 +5,74 @@
     "description": "Gulp AngularJS SEO template with fast development and production optimized builds",
     "homepage": "https://github.com/romaleev/gulp-angular-seo",
     "repository": "https://github.com/romaleev/gulp-angulaer-seo.git",
-    "keywords": ["roman malieiev", "angular", "node", "express", "gulp"],
+    "keywords": [
+        "roman malieiev",
+        "angular",
+        "node",
+        "express",
+        "gulp"
+    ],
     "log": [
         "error"
     ],
     "license": "BSD",
     "engine": "node >= 5.x.x",
     "devDependencies": {
-        "express": "4.x.x",
-        "bower": "1.x.x",
-        "require-dir": "0.x.x",
-        "del": "2.x.x",
-        "compression": "1.x.x",
-        "opn": "4.x.x",
-        "vinyl-ftp": "0.x.x",
-        "streamqueue": "1.x.x",
-        "phantom": "3.x.x",
-        "phantomjs": "2.x.x",
-        "mkdirp": "0.x.x",
-        "multimatch": "2.x.x",
-        "run-sequence": "1.x.x",
-        "cli-color": "1.x.x",
-        "progress": "1.x.x",
-        "apache-server-configs": "2.x.x",
-        "gulp": "3.x.x",
-        "gulp-if": "2.x.x",
-        "gulp-shell": "0.x.x",
-        "gulp-watch": "4.x.x",
-        "gulp-inject": "4.x.x",
-        "gulp-sync": "0.x.x",
-        "gulp-sort": "2.x.x",
-        "gulp-prompt": "0.x.x",
-        "gulp-load-plugins": "1.x.x",
-        "gulp-jshint": "2.x.x",
-        "gulp-useref": "2.x.x",
-        "gulp-minify-css": "1.x.x",
-        "gulp-ng-annotate": "2.x.x",
-        "gulp-uglify": "2.x.x",
-        "gulp-imagemin": "3.x.x",
-        "gulp-less": "3.x.x",
-        "gulp-jade": "1.x.x",
-        "gulp-concat": "2.x.x",
-        "gulp-add-src": "0.x.x",
-        "gulp-sourcemaps": "2.x.x",
-        "gulp-ng-html2js": "0.x.x",
-        "gulp-size": "2.x.x",
-        "gulp-debug": "2.x.x",
-        "gulp-changed": "1.x.x",
-        "gulp-uncss": "1.x.x",
-        "gulp-flatten": "0.x.x",
-        "gulp-rename": "1.x.x",
-        "gulp-replace": "0.x.x",
-        "gulp-sitemap": "4.x.x",
-        "gulp-manifest": "0.x.x",
-        "gulp-babel": "6.x.x",
-        "babel-preset-es2015": "6.x.x",
-        "errorhandler": "1.x.x",
-        "morgan": "1.x.x",
-        "jshint": "2.x.x",
-        "jshint-stylish": "2.x.x",
-        "less": "2.x.x",
-        "jade": "1.x.x",
-        "browser-sync": "2.x.x",
-        "gulp-nodemon": "2.x.x"
+        "apache-server-configs": "2.15.0",
+        "babel-preset-es2015": "6.24.1",
+        "bower": "^1.8.2",
+        "browser-sync": "^2.26.7",
+        "cli-color": "^1.4.0",
+        "compression": "^1.7.4",
+        "del": "^2.2.2",
+        "errorhandler": "^1.5.1",
+        "express": "^4.17.1",
+        "gulp": "^3.9.1",
+        "gulp-add-src": "^0.2.0",
+        "gulp-babel": "^6.1.3",
+        "gulp-changed": "^1.3.2",
+        "gulp-concat": "^2.6.1",
+        "gulp-debug": "^2.1.2",
+        "gulp-flatten": "^0.4.0",
+        "gulp-if": "^2.0.2",
+        "gulp-imagemin": "^3.4.0",
+        "gulp-inject": "4.3.2",
+        "gulp-jade": "^1.1.0",
+        "gulp-jshint": "^2.1.0",
+        "gulp-less": "^3.5.0",
+        "gulp-load-plugins": "^1.6.0",
+        "gulp-manifest": "^0.1.1",
+        "gulp-minify-css": "^1.2.4",
+        "gulp-ng-annotate": "^2.1.0",
+        "gulp-ng-html2js": "^0.2.3",
+        "gulp-nodemon": "^2.5.0",
+        "gulp-prompt": "^0.6.0",
+        "gulp-rename": "^1.4.0",
+        "gulp-replace": "^0.6.1",
+        "gulp-shell": "^0.8.0",
+        "gulp-sitemap": "^4.3.0",
+        "gulp-size": "^2.1.0",
+        "gulp-sort": "^2.0.0",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-sync": "^0.1.4",
+        "gulp-uglify": "^2.1.2",
+        "gulp-uncss": "^1.0.6",
+        "gulp-useref": "^2.1.0",
+        "gulp-watch": "^4.3.11",
+        "jade": "^1.11.0",
+        "jshint": "^2.11.0",
+        "jshint-stylish": "^2.2.1",
+        "less": "^2.7.3",
+        "mkdirp": "^0.5.3",
+        "morgan": "^1.9.1",
+        "multimatch": "^2.1.0",
+        "opn": "^4.0.2",
+        "phantom": "^3.2.1",
+        "phantomjs": "^2.1.7",
+        "progress": "^1.1.8",
+        "require-dir": "^0.3.2",
+        "run-sequence": "^1.2.2",
+        "streamqueue": "^1.1.2",
+        "vinyl-ftp": "^0.6.1"
     }
 }
